
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PFNGLPOLYGONOFFSETEXTPROC ;
typedef scalar_t__ (* GLADloadproc ) (char*) ;


 int GLAD_GL_EXT_polygon_offset ;
 scalar_t__ glad_glPolygonOffsetEXT ;

__attribute__((used)) static void load_GL_EXT_polygon_offset(GLADloadproc load) {
 if(!GLAD_GL_EXT_polygon_offset) return;
 glad_glPolygonOffsetEXT = (PFNGLPOLYGONOFFSETEXTPROC)load("glPolygonOffsetEXT");
}
